crates/shipper/src/ops/process/snapshots/shipper__ops__process__snapshot_tests__command_output_failure.snap
---
source: crates/shipper/src/ops/process/snapshot_tests.rs
expression: output
---
exit_code: 101
stdout: ""
stderr: "error[E0425]: cannot find value `x`\n"
timed_out: false
duration:
  secs: 3
  nanos: 200000000
