crates/shipper/src/ops/process/snapshots/shipper__ops__process__snapshot_tests__command_output_success.snap
---
source: crates/shipper/src/ops/process/snapshot_tests.rs
expression: output
---
exit_code: 0
stdout: "cargo 1.80.0\n"
stderr: ""
timed_out: false
duration:
  secs: 0
  nanos: 150000000
